--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,16 @@
         <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;500;600&display=swap" rel="stylesheet">
 
         <link href="/app.css" rel="stylesheet">
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-PQ8TGX3BD7"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-PQ8TGX3BD7');
+        </script>
     </head>
     <body class="antialiased">
         <div class="flex w-full min-h-screen justify-center">
