--- a/public/index.html
+++ b/public/index.html
@@ -39,10 +39,10 @@
                     EEGG = ROR + NFT
                 </h2>
                 <p>
-                    &copy; 2022,
+                    &copy; 2022 <span class="font-bold">https://manifesto.eegg.gallery</span><br/>
                     <a href="//eegg.gallery" target="_blank">eegg.gallery</a>,
-                    <a href="//peperafaj.cz" target="_blank">peperafaj.cz</a>,
-                    0xee54e45ec1cda5a4d9e837ff3b4310721140da30<br/>
+                    <a href="//peperafaj.cz" target="_blank">peperafaj.cz</a>,<br/>
+                    <a href="https://etherscan.io/address/0xee54e45ec1cda5a4d9e837ff3b4310721140da30" target="_blank">0xee54e45ec1cda5a4d9e837ff3b4310721140da30</a><br/>
                     Original date of the idea: 2022-01-04
                 </p>
                 <ol>
